--- a/Develop/package.json
+++ b/Develop/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start:dev": "",
-    "start": "",
+    "start:dev": "concurrently",
+    "start": "npm run build && cd server && node server.js",
     "server": "",
     "build": "",
     "install": "",
